--- a/maker_hub/templates/nav.html
+++ b/maker_hub/templates/nav.html
@@ -14,7 +14,15 @@
         <a class="nav-link" href="{{ url_for('public.home') }}">Home
           <span class="sr-only">(current)</span>
         </a>
+    {% if current_user and current_user.is_authenticated %}
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('parts_bp.landing') }}">Parts</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('projects_bp.landing') }}">Projects</a>
+      </li>
+      </li>
+    {% endif %}
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('public.about') }}">About</a>
       </li>
@@ -22,7 +30,7 @@
     {% if current_user and current_user.is_authenticated %}
     <ul class="navbar-nav my-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="{{ url_for('user.members') }}">Logged in as {{ current_user.username }}</a>
+        <a class="nav-link" href="{{ url_for('user.dashboard') }}">Logged in as {{ current_user.username }}</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('public.logout') }}">
