--- a/maker_hub/templates/public/register.html
+++ b/maker_hub/templates/public/register.html
@@ -7,6 +7,14 @@
     <form id="registerForm" class="form form-register" method="POST" action="" role="form">
            {{ form.csrf_token }}
             <div class="form-group">
+                {{form.first_name.label}}
+                {{form.first_name(placeholder="First name", class_="form-control")}}
+            </div>
+            <div class="form-group">
+                {{form.last_name.label}}
+                {{form.last_name(placeholder="Last name", class_="form-control")}}
+            </div>
+            <div class="form-group">
                 {{form.username.label}}
                 {{form.username(placeholder="Username", class_="form-control")}}
             </div>
